# django-migrant

./: .gitignore  README.md  constraints.txt  pyproject.toml
.github/workflows/: python-package.yml  release.yml  tag.yml  test.yml
src/django_migrant/: __main__.py
src/django_migrant/hook_templates/: header  post-checkout
src/django_migrant/management/commands/: migrant.py  nomad.py
src/django_nomad/: __main__.py  commands.py
src/django_nomad/hook_templates/: post-checkout
src/django_nomad/management/commands/: nomad.py
tests/: __init__.py  settings.py  test_command.py  test_stage_one.py  test_stage_three.py  test_stage_two.py
