[project]
name = "django-migrant"
version = "0.0.4"
authors = [
  { name="Paul Backhouse" },
]
description = "A developer utility to auto-migrate django apps when switching git branches."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
  "django"
]

[tool.setuptools.package-data]
django_migrant = ["hook_templates/post-checkout"]

[project.urls]
"Homepage" = "https://github.com/powlo/django-migrant"
"Bug Tracker" = "https://github.com/powlo/django-migrant/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"